# src/main/java/se/sundsvall/incident/api/model/Attachment.java
@@ -11,22 +11,22 @@ import lombok.Getter;
 @AllArgsConstructor(access = AccessLevel.PACKAGE)
 public class Attachment {
 
-	@Schema(description = "The category label", example = "Vattenmätare")
+	@Schema(description = "The category label", examples = "Vattenmätare")
 	private String category;
 
-	@Schema(description = "The name of the attachment", example = "Vattenmätningar")
+	@Schema(description = "The name of the attachment", examples = "Vattenmätningar")
 	private String name;
 
-	@Schema(description = "The attachment extension", example = ".pdf")
+	@Schema(description = "The attachment extension", examples = ".pdf")
 	private String extension;
 
-	@Schema(description = "The attachment MIME type", example = "application/json")
+	@Schema(description = "The attachment MIME type", examples = "application/json")
 	private String mimeType;
 
-	@Schema(description = "The attachment note", example = "Beskrivande meddelande")
+	@Schema(description = "The attachment note", examples = "Beskrivande meddelande")
 	private String note;
 
-	@Schema(description = "The file content as base64 encoded string", example = "aGVqaGVq")
+	@Schema(description = "The file content as base64 encoded string", examples = "aGVqaGVq")
 	private String file;
 
 }
