# src/main/java/se/sundsvall/incident/api/model/IncidentResponse.java
@@ -14,28 +14,28 @@ import se.sundsvall.incident.integration.db.entity.enums.Status;
 @AllArgsConstructor(access = AccessLevel.PACKAGE)
 public class IncidentResponse {
 
-	@Schema(description = "The Incident ID", example = "58f96da8-6d76-4fa6-bb92-64f71fdc6aa5")
+	@Schema(description = "The Incident ID", examples = "58f96da8-6d76-4fa6-bb92-64f71fdc6aa5")
 	private String incidentId;
 
-	@Schema(description = "The external case ID", example = "12345")
+	@Schema(description = "The external case ID", examples = "12345")
 	private String externalCaseId;
 
-	@Schema(description = "The ID of the person", example = "58f96da8-6d76-4fa6-bb92-64f71fdc6aa5")
+	@Schema(description = "The ID of the person", examples = "58f96da8-6d76-4fa6-bb92-64f71fdc6aa5")
 	private String personId;
 
-	@Schema(description = "The phone number", example = "0701740605")
+	@Schema(description = "The phone number", examples = "0701740605")
 	private String phoneNumber;
 
-	@Schema(description = "Reporters e-mail address", example = "someemail@somehost.se")
+	@Schema(description = "Reporters e-mail address", examples = "someemail@somehost.se")
 	private String email;
 
-	@Schema(description = "The way the reporter want to be contacted", example = "email")
+	@Schema(description = "The way the reporter want to be contacted", examples = "email")
 	private String contactMethod;
 
-	@Schema(description = "Description of the incident", example = "A description")
+	@Schema(description = "Description of the incident", examples = "A description")
 	private String description;
 
-	@Schema(description = "Status of the incident", example = "INSKICKAT")
+	@Schema(description = "Status of the incident", examples = "INSKICKAT")
 	private Status status;
 
 	@Schema(description = "The incident category")
@@ -44,10 +44,10 @@ public class IncidentResponse {
 	@Schema(description = "Attachments")
 	private List<Attachment> attachments;
 
-	@Schema(description = "When the incident were created", example = "2023-11-07T10:15:30")
+	@Schema(description = "When the incident were created", examples = "2023-11-07T10:15:30")
 	private LocalDateTime created;
 
-	@Schema(description = "When the incident were last updated", example = "2023-11-07T10:15:30")
+	@Schema(description = "When the incident were last updated", examples = "2023-11-07T10:15:30")
 	private LocalDateTime updated;
 
 }
