# src/main/java/se/sundsvall/incident/api/model/ValidOepCategoryResponse.java
@@ -11,10 +11,10 @@ import lombok.Getter;
 @AllArgsConstructor(access = AccessLevel.PACKAGE)
 public class ValidOepCategoryResponse {
 
-	@Schema(description = "The category ID", example = "15")
+	@Schema(description = "The category ID", examples = "15")
 	private String key;
 
-	@Schema(description = "The category label", example = "VATTENMÄTARE")
+	@Schema(description = "The category label", examples = "VATTENMÄTARE")
 	private String value;
 
 }
