# src/main/resources/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: api-incident
   contact: { }
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "3.0"
 servers:
-  - url: http://localhost:54361
+  - url: http://localhost:64385
     description: Generated server url
 paths:
   /{municipalityId}/incident:
@@ -630,94 +630,100 @@ paths:
 components:
   schemas:
     AttachmentRequest:
+      type: object
+      properties:
+        category:
+          type: string
+          description: The attachment category type
+          examples:
+            - Adress
+          minLength: 1
+        extension:
+          type: string
+          description: The attachment extension type
+          examples:
+            - .txt
+          minLength: 1
+        mimeType:
+          type: string
+          description: The attachment content type
+          examples:
+            - text/plain
+          minLength: 1
+        note:
+          type: string
+          description: The attachment note
+          examples:
+            - a small note about this file
+        file:
+          type: string
+          description: The attachment (file) content as a BASE64-encoded string
+          examples:
+            - aGVsbG8gd29ybGQK
+          minLength: 1
       required:
         - category
         - extension
         - file
         - mimeType
-      type: object
-      properties:
-        category:
-          minLength: 1
-          type: string
-          description: The attachment category type
-          example: Adress
-        extension:
-          minLength: 1
-          type: string
-          description: The attachment extension type
-          example: .txt
-        mimeType:
-          minLength: 1
-          type: string
-          description: The attachment content type
-          example: text/plain
-        note:
-          type: string
-          description: The attachment note
-          example: a small note about this file
-        file:
-          minLength: 1
-          type: string
-          description: The attachment (file) content as a BASE64-encoded string
-          example: aGVsbG8gd29ybGQK
-      description: Attachments
     IncidentSaveRequest:
-      required:
-        - category
-        - description
-        - personId
       type: object
       properties:
         personId:
           type: string
           description: A uuid string representing a person
-          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+          examples:
+            - 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         phoneNumber:
           type: string
           description: Mobile number. Should start with 07x
-          example: "0701740605"
+          examples:
+            - "0701740605"
         email:
           type: string
-          description: Reporters e-mail address
           format: email
-          example: someemail@somehost.se
+          description: Reporters e-mail address
+          examples:
+            - someemail@somehost.se
         contactMethod:
           type: string
           description: The way the reporter want to be contacted
-          example: email
+          examples:
+            - email
         category:
           type: integer
-          description: 'The category id for the incident '
           format: int32
-          example: 15
+          description: 'The category id for the incident '
+          examples:
+            - "15"
         description:
-          minLength: 1
           type: string
           description: Description of the incident
-          example: A description
+          examples:
+            - A description
+          minLength: 1
         mapCoordinates:
           type: string
           description: The map coordinates for the incident
-          example: "62.23162,17.27403"
+          examples:
+            - "62.23162,17.27403"
         externalCaseId:
           type: string
           description: The external case id for this incident
-          example: "1234"
+          examples:
+            - "1234"
         attachments:
           type: array
           description: Attachments
           items:
             $ref: "#/components/schemas/AttachmentRequest"
+      required:
+        - category
+        - description
+        - personId
     Problem:
       type: object
       properties:
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
         instance:
           type: string
           format: uri
@@ -726,8 +732,13 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
     StatusType:
       type: object
       properties:
@@ -776,15 +787,14 @@ components:
           type: string
         message:
           type: string
-        detail:
-          type: string
         instance:
           type: string
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
+        detail:
+          type: string
         suppressed:
           type: array
           items:
@@ -821,8 +831,7 @@ components:
     ThrowableProblem:
       type: object
       properties:
-        cause:
-          $ref: "#/components/schemas/ThrowableProblem"
+        cause: { }
         stackTrace:
           type: array
           items:
@@ -847,12 +856,6 @@ components:
                 type: boolean
         message:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
         instance:
           type: string
           format: uri
@@ -861,8 +864,13 @@ components:
           format: uri
         parameters:
           type: object
-          additionalProperties:
-            type: object
+          additionalProperties: { }
+        status:
+          $ref: "#/components/schemas/StatusType"
+        title:
+          type: string
+        detail:
+          type: string
         suppressed:
           type: array
           items:
@@ -909,40 +917,46 @@ components:
         status:
           type: string
           description: Incident status
-          example: KLART
+          examples:
+            - KLART
         incidentId:
           type: string
           description: The incident ID
-          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+          examples:
+            - 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
     CategoryPost:
+      type: object
+      properties:
+        title:
+          type: string
+          description: Category name
+          examples:
+            - GANGCYKELVAG
+          minLength: 1
+        label:
+          type: string
+          description: Description of the category
+          examples:
+            - Gång- och cykelväg
+          minLength: 1
+        forwardTo:
+          type: string
+          format: email
+          description: The E-mail where the incidents are forwarded to
+          examples:
+            - nowhere@nowhere.com
+          minLength: 1
+        subject:
+          type: string
+          description: The subject of the email
+          examples:
+            - Nytt larm
+          minLength: 1
       required:
         - forwardTo
         - label
         - subject
         - title
-      type: object
-      properties:
-        title:
-          minLength: 1
-          type: string
-          description: Category name
-          example: GANGCYKELVAG
-        label:
-          minLength: 1
-          type: string
-          description: Description of the category
-          example: Gång- och cykelväg
-        forwardTo:
-          minLength: 1
-          type: string
-          description: The E-mail where the incidents are forwarded to
-          format: email
-          example: nowhere@nowhere.com
-        subject:
-          minLength: 1
-          type: string
-          description: The subject of the email
-          example: Nytt larm
     CategoryPatch:
       type: object
       properties:
@@ -954,96 +968,112 @@ components:
           description: Category label
         forwardTo:
           type: string
-          description: The E-mail where the incidents are forwarded to
           format: email
+          description: The E-mail where the incidents are forwarded to
     Category:
       type: object
+      description: Category model
       properties:
         categoryId:
           type: integer
-          description: The category id
           format: int32
-          example: 15
+          description: The category id
+          examples:
+            - "15"
         title:
           type: string
           description: Category name
-          example: GANGCYKELVAG
+          examples:
+            - GANGCYKELVAG
         label:
           type: string
           description: Description of the category
-          example: Gång- och cykelväg
+          examples:
+            - Gång- och cykelväg
         forwardTo:
           type: string
           description: The E-mail where the incidents are forwarded to
-          example: nowhere@nowhere.com
+          examples:
+            - nowhere@nowhere.com
         subject:
           type: string
           description: The E-mail subject
-          example: Nytt Larm
-      description: Category model
+          examples:
+            - Nytt Larm
     Attachment:
       type: object
       properties:
         category:
           type: string
           description: The category label
-          example: Vattenmätare
+          examples:
+            - Vattenmätare
         name:
           type: string
           description: The name of the attachment
-          example: Vattenmätningar
+          examples:
+            - Vattenmätningar
         extension:
           type: string
           description: The attachment extension
-          example: .pdf
+          examples:
+            - .pdf
         mimeType:
           type: string
           description: The attachment MIME type
-          example: application/json
+          examples:
+            - application/json
         note:
           type: string
           description: The attachment note
-          example: Beskrivande meddelande
+          examples:
+            - Beskrivande meddelande
         file:
           type: string
           description: The file content as base64 encoded string
-          example: aGVqaGVq
-      description: Attachments
+          examples:
+            - aGVqaGVq
     IncidentResponse:
       type: object
       properties:
         incidentId:
           type: string
           description: The Incident ID
-          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+          examples:
+            - 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         externalCaseId:
           type: string
           description: The external case ID
-          example: "12345"
+          examples:
+            - "12345"
         personId:
           type: string
           description: The ID of the person
-          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+          examples:
+            - 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         phoneNumber:
           type: string
           description: The phone number
-          example: "0701740605"
+          examples:
+            - "0701740605"
         email:
           type: string
           description: Reporters e-mail address
-          example: someemail@somehost.se
+          examples:
+            - someemail@somehost.se
         contactMethod:
           type: string
           description: The way the reporter want to be contacted
-          example: email
+          examples:
+            - email
         description:
           type: string
           description: Description of the incident
-          example: A description
+          examples:
+            - A description
         status:
           type: string
           description: Status of the incident
-          example: INSKICKAT
           enum:
             - INSKICKAT
             - KLART
@@ -1053,8 +1083,11 @@ components:
             - VANTAR_KOMPLETTERING
             - ARKIVERAD
             - ERROR
+          examples:
+            - INSKICKAT
         category:
           $ref: "#/components/schemas/Category"
+          description: The incident category
         attachments:
           type: array
           description: Attachments
@@ -1062,64 +1095,79 @@ components:
             $ref: "#/components/schemas/Attachment"
         created:
           type: string
-          description: When the incident were created
           format: date-time
+          description: When the incident were created
+          examples:
+            - 2023-11-07T10:15:30
         updated:
           type: string
-          description: When the incident were last updated
           format: date-time
+          description: When the incident were last updated
+          examples:
+            - 2023-11-07T10:15:30
     IncidentOepResponse:
       type: object
       properties:
         incidentId:
           type: string
           description: The incident ID
-          example: 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
+          examples:
+            - 58f96da8-6d76-4fa6-bb92-64f71fdc6aa5
         externalCaseId:
           type: string
           description: The external case ID
-          example: "12345"
+          examples:
+            - "12345"
         statusId:
           type: integer
-          description: Status of the incident
           format: int32
+          description: Status of the incident
+          examples:
+            - KLART
         statusText:
           type: string
           description: Status text
-          example: Klart
+          examples:
+            - Klart
     ValidStatusResponse:
       type: object
       properties:
         statusId:
           type: integer
-          description: The ID of the status
           format: int32
-          example: 5
+          description: The ID of the status
+          examples:
+            - "5"
         status:
           type: string
           description: The status name
-          example: INSKICKAT
+          examples:
+            - INSKICKAT
     ValidCategoryResponse:
       type: object
       properties:
         category:
           type: string
           description: The name of the category
-          example: VATTENMÄTARE
+          examples:
+            - VATTENMÄTARE
         categoryId:
           type: integer
-          description: The ID of the category
           format: int32
-          example: 15
+          description: The ID of the category
+          examples:
+            - "15"
     ValidOepCategoryResponse:
       type: object
       properties:
         key:
           type: string
           description: The category ID
-          example: "15"
+          examples:
+            - "15"
         value:
           type: string
           description: The category label
-          example: VATTENMÄTARE
+          examples:
+            - VATTENMÄTARE
   securitySchemes: { }
